# bitcoin-sgx

./: .gitignore  CMakeLists.txt  README.md
Enclave/: CMakeLists.txt  Enclave_t.h  cltv.cpp  log.cpp  utils.cpp  utils.h
Enclave/bitcoin/primitives/: block.h
src/Enclave/: bitcoin_helpers.cpp  bitcoin_helpers.h  enclave_test.cpp
src/common/: Enclave.edl
src/untrusted/: enclave_utils.h
untrusted/: CMakeLists.txt  Enclave_u.h  enclave_utils.cpp  main.cpp
